[tool.poetry]
name = "es_app_cn_opt"
version = "0.1.0"
description = ""
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

click = "*"
elasticsearch = ">=7,<8"
elastic-enterprise-search = ">=7,<8"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
